# simplex

./: LICENSE.md  README.md  pyproject.toml
examples/: test_infeasible1  test_infeasible2  test_infeasible3  test_solved1  test_solved2  test_solved3  test_solved4  test_solved5  test_solved6  test_unbounded1  test_unbounded2  test_unbounded3
simplex/: __init__.py  __main__.py  expr_nodes.py  expr_tokenizer.py  expr_tree.py  expr_trees.py  parser.py  program.py  rewriter.py  tableau.py  utils.py
simplex/core/: __init__.py  formatter.py  model.py  program.py  rewriter.py  solver.py  tableau.py
simplex/formatters/: __init__.py  cli.py  dict_cli.py  dict_latex.py  latex.py  tableau_alt_cli.py  tableau_alt_latex.py  tableau_cli.py  tableau_latex.py
simplex/parsing/: __init__.py  nodes.py  parser.py  tokenizer.py  trees.py
simplex/solvers/: __init__.py  basic.py  bigm.py  twophase.py
simplex/utils/: __init__.py
tests/end2end/: test_scenario.py
tests/unit/: test_formatters.py  test_math_tree.py  test_rewriter.py  test_tableau.py  test_tokenizer.py  test_utils.py
